<resources>

    <string name="app_name" translatable="false">Positron</string>
    <string name="title_activity_maps">Map</string>
    <string name="toHack">Pirater</string>
    <string name="toAttack">Attaquer</string>
    <string name="toPut">Poser</string>
    <string name="toMaintain">Maintenir</string>
    <string name="title_activity_chack_poratls_view">CHackPoratlsView</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chack_portals_view">CHackPortalsView</string>
    <string name="title_activity_cmaintain_portals_view">CMaintainPortalsView</string>
    <string name="title_activity_cput_portals_view">CPutPortalsView</string>
    <string name="title_activity_cclick_portals_acitivity">CClickPortalsAcitivity</string>
    <string name="title_activity_cprofil">CProfilActivity</string>
    <string name="title_activity_csettings_acitvity">CSettingsAcitvity</string>
    <string name="title_activity_cstats">CStatsActivity</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_cskill_tree">CSkillTree</string>
    <string name="title_Skill_Tree">Arbre de compétences</string>
    <string name="title_Maintenance_Tree">Maintenance :</string>
    <string name="title_Attack_Tree">Offensif :</string>
    <string name="title_Hacking_Tree">Piratage :</string>
    <string name="title_Scout_Tree">Reconnaissance :</string>
    <string name="text_view_free_skill_point">Point de compétences libres : </string>
    <string name="title_activity_clocation_service">CLocationServiceActivity</string>

    <!-- launch service -->
    <string name="text_positron_in_progress">Positron est lancé !</string>
    <string name="title_positron_in_progress" translatable="false">Positron</string>
    <string name="podo_sensor_not_present">Le podomètre n\'est pas disponible sur cet appareil !</string>

    <!-- podometer service -->
    <string name="podo_text_value">Vous avez fait </string>
    <string name="step_string"> pas.</string>
    <string name="landscape_map">vue tactique</string>
    <string name="portrait_view">vue classique</string>
    <string name="title_activity_cchoice">CChoiceActivity</string>

    <!-- menu string -->
    <string name="positron_parameters">Paramètres de Positron</string>
    <string name="player_profil">Votre profil</string>
    <string name="positron_manual">Manuel d\'utilisation</string>
    <string name="competences_tree">Arbre de compétences</string>
    <string name="return_map">retourner sur la carte</string>
    <string name="tactical_view">vue tactique</string>
    <string name="menu">Menu</string>
    <string name="select_language">Langues</string>
    <string name="themes">Thèmes</string>
    <string name="Langues">Langues</string>
    <string name="select_team">Sélection de l\'équipe</string>
    <string name="title_activity_cselect_team2">CSelectTeamActivity2</string>
    <string name="french_language">Français</string>
    <string name="english_language">English</string>
    <string name="sign_in_text">se connecter</string>
    <string name="atom_story">Les adeptes d\'Atom pensent que l\'humanité n\'a plus de choix que de se tourner vers l\'adaptation totale de son environnement et vénèrent par dessus tout le nucléaire. L\'Institut est le noyau de cette communauté, et cherche désespérement à encadrer le phénomène de fission nucléaire permettant une énergie quasi illimitée. Leur credo? La fin justifie les moyens.</string>
    <string name="atom_text">atom</string>
    <string name="no">non</string>
    <string name="xenom_story">Xenom est un groupe qui s\'est formé à la suite des expériences douteuses pratiquées par l\'Institut. Leur but est de remettre les choses dans l\'ordre et limiter le mal provoqué par l\'inconscience et la folie des adeptes d\'Atom avant qu\'il ne soit trop tard.</string>
    <string name="long_text_listener">Un appui long sur l\'image de l\'une des deux équipes permet sa sélection.\nATTENTION !! Il est impossible d\'en changer !</string>
    <string name="rm_back_button">bouton de retour désactivé !</string>
    <string name="disconnection_button">se déconnecter</string>


</resources>
