<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fr.univtln.groupc.activities.profil.CChoiceActivity">


    <Button
        android:id="@+id/player_profil"
        android:onClick="setPlayerProfilActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_profil"
        android:layout_weight="1"
        android:layout_marginBottom="20sp"
        />

    <Button
        android:id="@+id/competences_tree"
        android:onClick="setSkillTreeActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/competences_tree"
        android:layout_weight="1"
        android:layout_marginBottom="20sp"
        />

    <Button
        android:id="@+id/parameters"
        android:onClick="setPositronParameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/positron_parameters"
        android:layout_weight="1"
        android:layout_marginBottom="20sp"
        />

    <Button
        android:id="@+id/manual"
        android:onClick="setPositronManual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/positron_manual"
        android:layout_weight="1"
        android:layout_marginBottom="20sp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_map"
        android:id="@+id/return_to_map"
        android:layout_weight="0.25"
        android:backgroundTint="@color/colorAccent"/>

</LinearLayout>
