<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/borderColor"
    tools:context="fr.univtln.groupc.activities.launcher.CSelectTeamActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_team"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <at.markushi.ui.CircleButton
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@mipmap/logatom"
                app:cb_color="#FFFFFF"
                app:cb_pressedRingWidth="8dip"
                android:layout_weight="0.37"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/view" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/view"
                android:layout_toEndOf="@+id/view"
                android:layout_alignTop="@+id/view"
                android:layout_alignBottom="@+id/view">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atom_story"
                    android:layout_toRightOf="@+id/view"
                    android:layout_toEndOf="@+id/view"
                    android:layout_alignTop="@+id/view"
                    android:layout_alignBottom="@+id/view" />

            </ScrollView>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <at.markushi.ui.CircleButton
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@mipmap/logxenom"
                app:cb_color="#FFFFFF"
                app:cb_pressedRingWidth="8dip"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/view2" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/view2"
                android:layout_toEndOf="@+id/view2"
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xenom_story"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/view2"
                    android:layout_toEndOf="@+id/view2" />

            </ScrollView>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_text_listener"
            android:textStyle="bold"
            android:textColor="@color/red"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/map"/>

    </LinearLayout>
</LinearLayout>
